--- a/a2/index.html
+++ b/a2/index.html
@@ -164,6 +164,55 @@
             </div>
           </div>
         </div>
+        <br><br>
+        <div class="more-info">
+          <div style="text-align: center;" class="seat-center">
+            <a class="seat-btn" data-toggle="modal" data-target="#seat-modal"
+              role="button">>> Snippet of our newly upgraded high quality seats</a></div>
+        </div>
+        <div id="seat-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+            <div class="modal-content seat-expand">
+              <div class="modal-header seat-header">
+                <h5 class="modal-title"><b>Newly Upgraded Seats</b></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body seat-body">
+                <div id="seat-slide" class="carousel slide carousel-fade" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="media/seat-img.jpeg" class="img-fluid" alt="Seat Image 1" style="width:100%; height:555px;">
+                    </div>
+                    <div class=" carousel-item">
+                      <img src="media/seat-img1.jpg" class="img-fluid" alt="Seat Image 2" style="width:100%; height:555px;">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="media/seat-img3.jpg" class="img-fluid" alt="Seat Image 3" style="width:100%; height:555px;">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="media/seat-img2.jpg" class="img-fluid" alt="Seat Image 4" style="width:100%; height:555px;">
+                    </div>
+                    
+                  </div>
+                  <a class="carousel-control-prev" href="#seat-slide" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#seat-slide" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              </div>
+              <div class="modal-footer seat-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <br>
         <hr style="border: grey solid 1px;" size="10px">
@@ -281,8 +330,8 @@
                     <div class="carousel-item active">
                       <p style="font-weight: bold; text-align: center;">The world of sound - Dolby Atmos</p>
                       <iframe width="560" height="315" src="https://www.youtube.com/embed/91BUM3WhCfo" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen style="display: block; margin: 0 auto;"></iframe>
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                        style="display: block; margin: 0 auto;"></iframe>
                     </div>
                     <div class="carousel-item">
                       <img src="media/dolby-atmos1.jpg" class="img-fluid" alt="Dolby Atmos Image 1">
@@ -637,7 +686,7 @@
       <div>&copy;
         <script>
           document.write(new Date().getFullYear());
-        </script> Put your name(s), student number(s) and group name here. Last modified
+        </script> - Group 2: Vo An Huy (s3804220), Doan Nguyen My Hanh (s3639869) Last modified 19/4/2020.
         <?= date ("Y F d  H:i", filemtime($_SERVER['SCRIPT_FILENAME'])); ?>.</div>
       <div>Disclaimer: This website is not a real website and is being developed as part of a School of Science Web
         Programming course at RMIT University in Melbourne, Australia.</div>
@@ -645,5 +694,4 @@
     </footer>
   </div>
 </body>
-
 </html>
