--- a/a3/index.html
+++ b/a3/index.html
@@ -58,7 +58,7 @@
     <nav id="navigation" class="navbar sticky-top navbar-expand-sm shadow">
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a id="buttontest" class="nav-link btn btn-primary btn-lg" href="#About-us" role="button">ABOUT US</a>
+          <a class="nav-link btn btn-primary btn-lg" href="#About-us" role="button">ABOUT US</a>
         </li>
         <li class="nav-item">
           <a class="nav-link btn btn-primary btn-lg" href="#pricing" role="button">PRICES</a>
@@ -1082,46 +1082,54 @@
             <input type="hidden" name="movie[id]" id="movie-id">
             <input type="hidden" name="movie[day]" id="movie-day">
             <input type="hidden" name="movie[hour]" id="movie-hour">
+          
             <div class="row">
               <div class="col-md-4">
                 <fieldset>
                   <legend>Standard</legend>
-                  <p>Adult:
-                    <select class="seat-select" name="seats[STA]" id="seats-STA" style="width:100%;">
+                  <div class="form-group">
+                    <label for="seats-STA">Adult</label>
+                    <select class="seat-select" name="seats[STA]" id="seats-STA">
                       <option value=''>Please Select</option>
                     </select>
-                  </p>
-                  <p>Concession:
-                    <select class="seat-select" name="seats[STP]" id="seats-STP" style="width:100%;">
+                  </div>
+                  <div class="form-group">
+                    <label for="seats-STP">Concession</label>
+                    <select class="seat-select" name="seats[STP]" id="seats-STP">
                       <option value=''>Please Select</option>
                     </select>
-                  </p>
-                  <p>Children:
-                    <select class="seat-select" name="seats[STC]" id="seats-STC" style="width: 100%;">
+                  </div>
+                  <div class="form-group">
+                    <label for="seats-STC">Child</label>
+                    <select class="seat-select" name="seats[STC]" id="seats-STC">
                       <option value=''>Please Select</option>
                     </select>
-                  </p>
+                  </div>
                 </fieldset>
-                <hr style="border: grey solid 1px;" size="10px">
+                
                 <fieldset>
                   <legend>First Class</legend>
-                  <p>Adult:
-                    <select class="seat-select" name="seats[FCA]" id="seats-FCA" style="width:100%;">
+                  <div class="form-group">
+                  <label for="seats-FCA">Adult</label>
+                    <select class="seat-select" name="seats[FCA]" id="seats-FCA">
                       <option value=''>Please Select</option>
                     </select>
-                  </p>
-                  <p>Concession:
-                    <select class="seat-select" name="seats[FCP]" id="seats-FCP" style="width:100%;">
+                  </div>
+                  <div class="form-group">
+                    <label for="seats-FCP">Concession</label>
+                    <select class="seat-select" name="seats[FCP]" id="seats-FCP">
                       <option value=''>Please Select</option>
                     </select>
-                  </p>
-                  <p>Children:
-                    <select class="seat-select" name="seats[FCC]" id="seats-FCC" style="width: 100%;">
+                  </div>
+                  <div class="form-group">
+                    <label for="seats-FCC">Child</label>
+                    <select class="seat-select" name="seats[FCC]" id="seats-FCC">
                       <option value=''>Please Select</option>
                     </select>
-                  </p>
+                  </div>
                 </fieldset>
-                <p id="total">Total $ </p>
+                <br>
+                <p style="text-align: right;"><b>Total: $</b> <span id="total"></span></p>
               </div>
 
               <div class="col-md-8">
@@ -1131,47 +1139,24 @@
                     <br><br>
                     <div class="form-group">
                       <label for="cust-name">Name</label>
-                      <input type="text" name="cust[name]" id="cust-name" onblur="checkCustName()" onkeypress="checkCustName()" style="width: 100%;" required>
+                      <input type="text" name="cust[name]" id="cust-name" oninput="checkCustName()" style="width: 100%;" required>
                     </div>
 
                     <div class="form-group">
                       <label for="cust-email">Email</label>
-                      <input type="email" name="cust[email]" id="cust-email" style="width: 100%;">
+                      <input type="email" name="cust[email]" id="cust-email" style="width: 100%;" required>
                     </div>
                     <div class="form-group">
                       <label for="cust-mobile">Mobile</label>
-                      <input type="number" name="cust[mobile]" id="cust-mobile" style="width: 100%;">
+                      <input type="tel" name="cust[mobile]" id="cust-mobile" oninput="checkCustMobile()" style="width: 100%;" required>
                     </div>
                     <div class="form-group">
                       <label for="cust-card">Credit Card</label>
-                      <input type="number" name="cust[card]" id="cust-card" style="width: 100%;">
+                      <input type="text" name="cust[card]" id="cust-card" oninput="checkCustCard()" style="width: 100%;" required>
                     </div>
                     <div class="form-group">
-                      <label for="cust-expiryMonth">Expiry:</label>
-                      <select name="cust[expiryMonth]" id="cust-expiryMonth">
-                        <option value="MM" selected>MM</option>
-                        <option value="01">01</option>
-                        <option value="02">02</option>
-                        <option value="03">03</option>
-                        <option value="04">04</option>
-                        <option value="05">05</option>
-                        <option value="06">06</option>
-                        <option value="07">07</option>
-                        <option value="08">08</option>
-                        <option value="09">09</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>
-                        <option value="12">12</option>
-                      </select>
-                      <select name="cust[expiryYear]" id="cust-expiryYear">
-                        <option value="YYYY" selected>YYYY</option>
-                        <option value="2020">2020</option>
-                        <option value="2021">2021</option>
-                        <option value="2022">2022</option>
-                        <option value="2023">2023</option>
-                        <option value="2024">2024</option>
-                        <option value="2025">2025</option>
-                      </select>
+                      <label for="cust-expiry">Expiry</label>
+                      <input type="month" name="cust[expiry]" id="cust-expiry" style="width: 100%;" placeholder="YYYY-MM" required>
                     </div>
                     <br><br>
                     <input type="submit" name="order" value="Order" id="order">
